Bug 816028 - Workaround for zimbra server crash on LIST (SUBSCRIBED). r=irving